--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html:5>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -20,7 +20,7 @@
 
 
 
-    <section class="container-fluid bg">
+    <section class="container-fluid">
       <section class="row justify-content-center">
       <section class="col-12 col-sm-6 col-md-3">
 
