--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <input type="password" class="form-control" id="pass">
               </div>
       
-              <button class="btn  btn-link button-login btn-lg btn-block btno" type="submit" > <a style="color: white;">  Sign in</a></button>
+              <button class="btn  btn-outline-secondary btno" type="submit" > <a style="color: white;">  Sign in</a></button>
               
               <article class="row margin-bottom-50 ">
                 <div class="ls-line-md col-md-5"></div>
