medium responsive mode

--- a/html/formularios.html
+++ b/html/formularios.html
@@ -7,22 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <title>Formulario</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Hello, world!</title>
   </head>
-  <body style="background-color: rgb(239, 242, 245);">
-    
-    <div class="center">       
-        <div align="center" class="one hi">
-            <h3 >Formulario</h3 >             
-        </div>    
-      <div align="center" class="one hi">
-          <h3 >Formulario</h3 >             
-      </div>
-      <div align="center" class="one hi">
-        <h3 >Formularioo</h3 >             
-    </div>
-   
+  <body>
+    <div class="general">
+
+
     </div>
 
     <!-- Optional JavaScript -->
