--- a/html/formulario.html
+++ b/html/formulario.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../css/formulario.css">
     <title>Formulario</title>
   </head>
-  <body style="background-color: rgb(239, 242, 245);">
+  <body ">
 
     <nav class="navbar sticky-top navbar-dark " style="background-color: #0e5c94;">
       <span class="navbar-brand mb-0 h1">Frond End</span>
@@ -72,6 +72,7 @@
       </div>
     </div>       
 </div>
+
     </form>
    
     </div>
