--- a/html/formulario.html
+++ b/html/formulario.html
@@ -13,7 +13,7 @@
   <body ">
 
     <nav class="navbar sticky-top navbar-dark " style="background-color: #0e5c94;">
-      <span class="navbar-brand mb-0 h1">Frond End</span>
+      <span class="navbar-brand mb-0 h1"> <img src="../asset/logo.png" > Frond End</span>
       <span class="navbar-text">
         register
       </span>
