--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body style="background-color: rgb(239, 242, 245);">
     <!-- As a link -->
     <nav class="navbar sticky-top navbar-dark " style="background-color: #0e5c94;">
-      <span class="navbar-brand mb-0 h1">Frond End</span>
+      <span class="navbar-brand mb-0 h1"> <img src="asset/logo.png" > Frond End</span>
       <span class="navbar-text">
         register
       </span>
