--- a/html/operadores.html
+++ b/html/operadores.html
@@ -14,17 +14,14 @@
     
     <nav class="navbar sticky-top navbar-dark " style="background-color: #0e5c94;">
       <span class="navbar-brand mb-0 h1"> <img src="../asset/logo.png" > Frond End</span>
-        <span class="navbar-text">
-          register
-        </span>
-      </nav>
+    </nav>
    
-    <div class="center bg  " > 
+    <div class="center bg container-fluid" > 
 
-        <div class="col-12 col-md-8 hi">
+        <div class="col-12 col-sm-12 col-md-9 hi">
 
-        <table class="table  col-12 col-md-12">
-            <thead class="thead-dark">
+        <table class="table col-12 col-sm-12 col-md-12">
+            <thead class="thead-dark ">
               <tr>
                 <th scope="col">#</th>
                 <th scope="col">Id</th>
@@ -69,12 +66,7 @@
 
         </div>
 
-    <div>
-
-
-
-
-
+    <div> 
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
