--- a/index.html
+++ b/index.html
@@ -15,21 +15,18 @@
     <!-- As a link -->
     <nav class="navbar sticky-top navbar-dark " style="background-color: #0e5c94;">
       <span class="navbar-brand mb-0 h1"> <img src="asset/logo.png" > Frond End</span>
-      <span class="navbar-text">
-        register
-      </span>
-
     </nav>
 
 
 
     <section class="container-fluid bg">
       <section class="row justify-content-center">
-      <section class="col-9 col-md-3">       
+      <section class="col-9 col-sm-6 col-md-3 ">       
             
           <form class="form-container">  
             <div align="center" class="sign">
-              <h3 >Sign in</h3 >             
+              <h3 >Sign in</h3 >  
+                         
              </div>          
               <div class="form-group">
                 <label for="name">E-mail</label>
