--- a/html/operadores.html
+++ b/html/operadores.html
@@ -14,6 +14,11 @@
     
     <nav class="navbar sticky-top navbar-dark " style="background-color: #0e5c94;">
       <span class="navbar-brand mb-0 h1"> <img src="../asset/logo.png" > Frond End</span>
+      <span class="navbar-text">
+        <a href="../index.html">         
+          Sign out
+       </a>
+      </span>
     </nav>
    
     <div class="center bg container-fluid" > 
@@ -28,6 +33,7 @@
                 <th scope="col">Name</th>
                 <th scope="col">Last name</th>
                 <th scope="col">E-mail</th>
+                <th scope="col">Test</th>
               </tr>
             </thead>
             <tbody>
@@ -37,6 +43,7 @@
                 <td>Abraham</td>
                 <td>Lugo Ramirez</td>
                 <td>labraham@uninorte.edu.co</td>
+                <td><a class="btn btn-primary"  href="formulario.html" role="button" >See test</a></td>
               </tr>
               <tr>
                 <th scope="row">2</th>
@@ -44,6 +51,7 @@
                 <td>Andrew</td>
                 <td>Rodriguez Caballero</td>
                 <td>Randrew@gmail.com</td>
+                <td><a class="btn btn-primary"  href="formulario.html" role="button" >See test</a></td>
               </tr>
               <tr>
                 <th scope="row">3</th>
@@ -51,6 +59,7 @@
                 <td>Dilan</td>
                 <td>Jimenez Ramirez</td>
                 <td>Jimenezd@uninorte.edu.co</td>
+                <td><a class="btn btn-primary"  href="formulario.html" role="button" >See test</a></td>
               </tr>
               <tr>
                 <th scope="row">4</th>
@@ -58,6 +67,7 @@
                 <td>Bladimir</td>
                 <td>Ramirez Gaitan</td>
                 <td>blacho@uninorte.edu.co</td>
+                <td><a class="btn btn-primary"  href="formulario.html" role="button" >See test</a></td>
               </tr>
 
 
