--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <title>Front-end-test</title>
     <script type="text/javascript" src="js/funtions.js"></script>
   </head>
-  <body style="background-color: rgb(239, 242, 245);">
+  <body >
     <!-- As a link -->
-    <nav class="navbar sticky-top navbar-dark " style="background-color: #0e5c94;">
+    <nav class="navbar sticky-top navbar-dark " style="background-color: #0e5c94;" >
       <span class="navbar-brand mb-0 h1"> <img src="asset/logo.png" > Frond End</span>
     </nav>
 
@@ -22,7 +22,7 @@
 
     <section class="container-fluid bg">
       <section class="row justify-content-center">
-      <section class="col-9 col-sm-6 col-md-3 ">       
+      <section class="col-10 col-sm-6 col-md-3 ">       
             
           <form class="form-container">  
             <div align="center" class="sign">
