--- a/html/resultado.html
+++ b/html/resultado.html
@@ -12,9 +12,11 @@
   </head>
   <body>
     <nav class="navbar sticky-top navbar-dark " style="background-color: #0e5c94;">
-        <span class="navbar-brand mb-0 h1"> <img src="../asset/logo.png" > Frond End</span>
+        <span class="navbar-brand mb-0 h1"> <img src="../asset/logo.png" > Front End</span>
         <span class="navbar-text">
-          register
+          <a href="../index.html">         
+            Sign out
+         </a>
         </span>
       </nav>
     
