Modified - Add logo, Top, responsive

--- a/html/formulario.html
+++ b/html/formulario.html
@@ -12,16 +12,15 @@
   </head>
   <body >
 
-    <nav class="navbar sticky-top navbar-dark " style="background-color: #0e5c94;">
-      <span class="navbar-brand mb-0 h1"> <img src="../asset/logo.png" > Fron End</span>
-      <span class="navbar-text">
-        <a href="../index.html">         
-          Sign out
-       </a>
-      </span>
-    </nav>
+   
     
-    <div class="center bg justify-content-center" >   
+    <div class="center bg justify-content-center" >
+      <div class="center bg container-fluid" > 
+        <div class="logo">
+          <a href="operadores.html">
+          <img src="../asset/logo.png" >
+          </a>
+        </div>   
       <form  class="down">    
         <div class="row">
         <div align="center" class="one hi col-11 col-sm-11 col-md-11 bg-transparent">   
