--- a/html/resultado.html
+++ b/html/resultado.html
@@ -11,19 +11,17 @@
     <title>Front-end</title>
   </head>
   <body>
-    <nav class="navbar sticky-top navbar-dark " style="background-color: #0e5c94;">
-        <span class="navbar-brand mb-0 h1"> <img src="../asset/logo.png" > Front End</span>
-        <span class="navbar-text">
-          <a href="../index.html">         
-            Sign out
-         </a>
-        </span>
-      </nav>
+    
     
     <div class="center bg  " > 
+      <div class="logo">
+        <a href="operadores.html">
+        <img src="../asset/logo.png" >
+        </a>
+      </div> 
         <div class="col-12 col-md-8 hi">
 
-            <h1>Resultado:</h1>
+            <h1>Score:</h1>
             <h1 class="text">100%</h1>
             <h3>5/5</h3>
 
