--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
     <script type="text/javascript" src="js/funtions.js"></script>
   </head>
   <body >
-    <!-- As a link -->
-    <nav class="navbar sticky-top navbar-dark " style="background-color: #0e5c94;" >
-      <span class="navbar-brand mb-0 h1"> <img src="asset/logo.png" > Frond End</span>
-    </nav>
+  
 
 
 
     <section class="container-fluid bg">
+      <div class="logo">
+        <a href="index.html">
+        <img src="asset/logo.png" >
+        </a>
+      </div>
+
+
       <section class="row justify-content-center">
       <section class="col-10 col-sm-6 col-md-3 ">       
             
