--- a/html/operadores.html
+++ b/html/operadores.html
@@ -12,16 +12,14 @@
   </head>
   <body>
     
-    <nav class="navbar sticky-top navbar-dark " style="background-color: #0e5c94;">
-      <span class="navbar-brand mb-0 h1"> <img src="../asset/logo.png" > Frond End</span>
-      <span class="navbar-text">
-        <a href="../index.html">         
-          Sign out
-       </a>
-      </span>
-    </nav>
+   
    
     <div class="center bg container-fluid" > 
+      <div class="logo">
+        <a href="../index.html">
+        <img src="../asset/logo.png" >
+        </a>
+      </div>
 
         <div class="col-12 col-sm-12 col-md-9 hi">
 
