--- a/html/formulario.html
+++ b/html/formulario.html
@@ -23,7 +23,7 @@
         </div>   
       <form  class="down">    
         <div class="row">
-        <div align="center" class="one hi col-11 col-sm-11 col-md-11 bg-transparent">   
+        <div align="center" class="one hi col-11 col-sm-11 col-md-11 ">   
                     
             <h3 >Questions</h3 >
               <br>   
