--- a/html/operadores.html
+++ b/html/operadores.html
@@ -22,8 +22,8 @@
       </div>
 
         <div class="col-12 col-sm-12 col-md-9 hi">
-
-        <table class="table col-12 col-sm-12 col-md-12">
+          <div class="table-responsive">
+        <table class="table">
             <thead class="thead-dark ">
               <tr>
                 <th scope="col">#</th>
@@ -71,7 +71,7 @@
 
             </tbody>
           </table>
-
+          </div>
         </div>
 
     <div> 
