--- a/html/operadores.html
+++ b/html/operadores.html
@@ -21,10 +21,11 @@
         </a>
       </div>
 
-        <div class="col-12 col-sm-12 col-md-9 hi">
-        <table class="table">
-            <thead class="thead-dark ">
-              <tr>
+      <div class="col-12 col-sm-12 col-md-9 hi">
+      <div class="table-responsive">
+      <table class="table">
+          <thead class="thead-dark ">
+            <tr>
                 <th scope="col">#</th>
                 <th scope="col">Id</th>
                 <th scope="col">Name</th>
@@ -70,10 +71,10 @@
 
             </tbody>
           </table>
-          </div>
-        </div>
 
-    <div> 
+        </div>
+      </div>
+      </div> 
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
