--- a/html/formulario.html
+++ b/html/formulario.html
@@ -128,7 +128,7 @@
     <p></p>     
 </div>
 </div>
-<div align="center" class="one hi col-5x| col-md-2">
+<div  class="cente">
 <a class="btn btn-primary"  href="resultado.html" role="button" >See Score</a>
 </div>
     </form>
