--- a/html/operadores.html
+++ b/html/operadores.html
@@ -8,13 +8,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Front end</title>
+    <title>Operators</title>
   </head>
   <body>
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4 shadow">
-      <object class="pr-2 ml-3" type="image/svg+xml" data="assets/eco.svg" width="42px" height="auto"></object>
-      <a class="nav-name navbar-brand" href="../index.html">Gasoducto</a>
+      <div class="logo" style="top: auto;" >
+        <a href="../index.html">
+        <img src="../asset/logo.png" >
+        </a>
+      </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,21 +26,11 @@
         <li class="nav-item active">
           <a class="nav-link" href="formulario.html">Questions</a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link btn-success btn ml-3 d-none d-lg-block" href="../index.html">Iniciar sesión</a>
-          <a class="nav-link d-lg-none text-success" href="../index.html">Iniciar sesión</a>
-        </li>
         </ul>
       </div>
     </nav>
    
     <div class="center bg container-fluid" > 
-      <div class="logo">
-        <a href="../index.html">
-        <img src="../asset/logo.png" >
-        </a>
-      </div>
-
       <div class="col-12 col-sm-12 col-md-9 hi">
       <div class="table-responsive">
       <table class="table">
@@ -58,7 +51,7 @@
                 <td>Abraham</td>
                 <td>Lugo Ramirez</td>
                 <td>labraham@uninorte.edu.co</td>
-                <td><a class="btn btn-primary"  href="formulario.html" role="button" >See test</a></td>
+                <td><a class="btn btn-primary"  href="formulario.html" role="button" >View</a></td>
               </tr>
               <tr>
                 <th scope="row">2</th>
@@ -66,7 +59,7 @@
                 <td>Andrew</td>
                 <td>Rodriguez Caballero</td>
                 <td>Randrew@gmail.com</td>
-                <td><a class="btn btn-primary"  href="formulario.html" role="button" >See test</a></td>
+                <td><a class="btn btn-primary"  href="formulario.html" role="button" >View</a></td>
               </tr>
               <tr>
                 <th scope="row">3</th>
@@ -74,7 +67,7 @@
                 <td>Dilan</td>
                 <td>Jimenez Ramirez</td>
                 <td>Jimenezd@uninorte.edu.co</td>
-                <td><a class="btn btn-primary"  href="formulario.html" role="button" >See test</a></td>
+                <td><a class="btn btn-primary"  href="formulario.html" role="button" >View</a></td>
               </tr>
               <tr>
                 <th scope="row">4</th>
@@ -82,32 +75,25 @@
                 <td>Bladimir</td>
                 <td>Ramirez Gaitan</td>
                 <td>blacho@uninorte.edu.co</td>
-                <td><a class="btn btn-primary"  href="formulario.html" role="button" >See test</a></td>
+                <td><a class="btn btn-primary"  href="formulario.html" role="button" >View</a></td>
               </tr>
-
-
             </tbody>
           </table>
           <div class="cente">
             <a class="btn btn-primary"  href="formulario.html" role="button" >Make test</a>
           </div>
-
-          
-
-        </div>
+          </div>
       </div>
       </div> 
-
-
       <footer class="footer mt-auto py-4 bg-dark text-light shadow">
         <div class="container">
             <div class="row align-items-center py-3 justify-content-around">
             <div class="row mb-1">
-              <object class="pr-2 ml-3" type="image/svg+xml" data="assets/eco.svg" width="50px" height="auto"></object>
-              <a class="nav-name navbar-brand text-light" href="index.html">Gasoducto</a>
+              <div class="logo">
+                <a href="index.html">
+                <img src="../asset/logo.png" >
+                </a>
               </div>
-              <div class="col d-none d-lg-block">
-              <a class="text-light mx-auto" href="preguntas.html">Questions</a>
               </div>
               <div>
               <p class="mb-0">&copy; 2020 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
