--- a/html/resultado.html
+++ b/html/resultado.html
@@ -31,7 +31,7 @@
     </nav>     
     <div class="center bg  " >      
         <div class="col-12 col-md-8 hi">          
-            <h2 class="font-weight-bold">Resultado</h2>
+            <h2 class="font-weight-bold">Test result</h2>
             <div class="list-group my-3">
               <div class="list-group-item d-flex justify-content-between align-items-center">
                 <p class="text-justify mb-0"><strong>1.</strong> Certain variants link on random text, leading to advertiser website.</p>
