--- a/html/operadores.html
+++ b/html/operadores.html
@@ -48,7 +48,7 @@
                 <td>Abraham</td>
                 <td>Lugo Ramirez</td>
                 <td>labraham@uninorte.edu.co</td>
-                <td><a class="btn btn-primary"  href="formulario.html" role="button" >View</a></td>
+                <td><a class="btn btn-primary"  href="resultado.html" role="button" >View</a></td>
               </tr>
               <tr>
                 <th scope="row">2</th>
@@ -56,7 +56,7 @@
                 <td>Andrew</td>
                 <td>Rodriguez Caballero</td>
                 <td>Randrew@gmail.com</td>
-                <td><a class="btn btn-primary"  href="formulario.html" role="button" >View</a></td>
+                <td><a class="btn btn-primary"  href="resultado.html" role="button" >View</a></td>
               </tr>
               <tr>
                 <th scope="row">3</th>
@@ -64,7 +64,7 @@
                 <td>Dilan</td>
                 <td>Jimenez Ramirez</td>
                 <td>Jimenezd@uninorte.edu.co</td>
-                <td><a class="btn btn-primary"  href="formulario.html" role="button" >View</a></td>
+                <td><a class="btn btn-primary"  href="resultado.html" role="button" >View</a></td>
               </tr>
               <tr>
                 <th scope="row">4</th>
@@ -72,12 +72,12 @@
                 <td>Bladimir</td>
                 <td>Ramirez Gaitan</td>
                 <td>blacho@uninorte.edu.co</td>
-                <td><a class="btn btn-primary"  href="formulario.html" role="button" >View</a></td>
+                <td><a class="btn btn-primary"  href="resultado.html" role="button" >View</a></td>
               </tr>
             </tbody>
           </table>
           <div class="cente">
-            <a class="btn btn-primary"  href="formulario.html" role="button" >Make test</a>
+            <a class="btn btn-primary"  href="resultado.html" role="button" >Make test</a>
           </div>
           </div>
       </div>
