--- a/html/operadores.html
+++ b/html/operadores.html
@@ -77,7 +77,7 @@
             </tbody>
           </table>
           <div class="cente">
-            <a class="btn btn-primary"  href="resultado.html" role="button" >Make test</a>
+            <a class="btn btn-primary"  href="formulario.html" role="button" >Make test</a>
           </div>
           </div>
       </div>
